--- a/HW/hw3/hw3.ipynb
+++ b/HW/hw3/hw3.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -77,21 +77,30 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Homework 3 -- name: Hansika Weerasena, email: hansikam.lokukat@ufl.edu, UFID: 11639514\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "NAME = 'Your name here.'\n",
-    "EMAIL = 'Your email here.'\n",
-    "UFID = 12345678\n",
+    "NAME = 'Hansika Weerasena'\n",
+    "EMAIL = 'hansikam.lokukat@ufl.edu'\n",
+    "UFID = 11639514\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "# raise NotImplementedError()\n",
     "\n",
     "print('Homework 3 -- name: {}, email: {}, UFID: {}\\n'.format(NAME, EMAIL, UFID))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -179,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "editable": true,
@@ -200,14 +209,14 @@
    },
    "outputs": [],
    "source": [
-    "academic_integrity_acknowledgement = False\n",
+    "academic_integrity_acknowledgement = True\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -274,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -289,7 +298,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------\n",
+      "### Python version: 3.9.6 (default, Nov 10 2023, 13:38:27) \n",
+      "[Clang 15.0.0 (clang-1500.1.0.2.5)]\n",
+      "### NumPy version: 1.26.3\n",
+      "### Scikit-learn version: 1.4.0\n",
+      "------------\n"
+     ]
+    }
+   ],
    "source": [
     "# Load packages we need\n",
     "import sys\n",
@@ -336,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -364,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -409,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -427,14 +449,14 @@
    "source": [
     "\"\"\"Fill in the path to the directory where 'bikesharehour.csv.gz' is located.\n",
     "\"\"\"\n",
-    "data_root = '<relative or absolute path to directory>' #put the path here\n",
+    "data_root = './data' #put the path here\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -450,7 +472,36 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 17379 entries, 0 to 17378\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column      Non-Null Count  Dtype  \n",
+      "---  ------      --------------  -----  \n",
+      " 0   season      16320 non-null  float64\n",
+      " 1   year        16231 non-null  float64\n",
+      " 2   month       16304 non-null  float64\n",
+      " 3   hour        16254 non-null  float64\n",
+      " 4   holiday     16277 non-null  float64\n",
+      " 5   weekday     16282 non-null  float64\n",
+      " 6   workingday  16297 non-null  float64\n",
+      " 7   weathersit  16324 non-null  float64\n",
+      " 8   temp        16242 non-null  float64\n",
+      " 9   atemp       16271 non-null  float64\n",
+      " 10  hum         16252 non-null  float64\n",
+      " 11  windspeed   16281 non-null  float64\n",
+      " 12  registered  16244 non-null  float64\n",
+      " 13  nsqrtc      16263 non-null  float64\n",
+      " 14  count       17379 non-null  int64  \n",
+      "dtypes: float64(14), int64(1)\n",
+      "memory usage: 2.0 MB\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "dataset_fp = os.path.join(data_root, 'bikesharehour.csv.gz')\n",
@@ -486,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -501,7 +552,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "features: ['season', 'year', 'month', 'hour', 'holiday', 'weekday', 'workingday', 'weathersit', 'temp', 'atemp', 'hum', 'windspeed', 'registered', 'nsqrtc'] --- target: count\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -559,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -645,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -710,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -736,7 +795,10 @@
     "    assert w.shape[0] == X.shape[1]\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "\n",
+    "    pred_y = X.dot(w) + b\n",
+    "    \n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    assert pred_y.shape == (X.shape[0],)\n",
     "    return pred_y"
@@ -744,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -794,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -885,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -958,7 +1020,10 @@
     "            iteration_idx = epoch * num_batches + batch_idx\n",
     "            \n",
     "            # YOUR CODE HERE\n",
-    "            raise NotImplementedError()\n",
+    "            batch_end = min(batch_start + batch_size, n)\n",
+    "            mb_X = shuf_X[batch_start:batch_end, :]\n",
+    "            mb_y = shuf_y[batch_start:batch_end]\n",
+    "            # raise NotImplementedError()\n",
     "            assert mb_X.shape[0] == mb_y.shape[0]\n",
     "            \n",
     "            gradient = gradient_fn(theta, mb_X, mb_y) # calculate the gradient vector\n",
@@ -1004,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1071,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1097,20 +1162,23 @@
     "# this is a constant schedule, it should always return the learning rate eta (regardless of epoch)\n",
     "def constant_lr_schedule(eta, epoch):\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    return eta\n",
+    "    #raise NotImplementedError()\n",
     "\n",
     "def random_uniform_init(m, low=-1.0, high=1.0):\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    return np.random.uniform(low, high, (m, 1))\n",
+    "    #raise NotImplementedError()\n",
     "\n",
     "def zero_init(m):\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "     return np.zeros((m, 1))\n",
+    "    #raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1162,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1183,8 +1251,10 @@
     "def loss_mse(theta, X, y):\n",
     "    (n, m) = X.shape\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    \n",
+    "    pred = X.dot(theta)\n",
+    "    error = pred - y\n",
+    "    loss_val = ((1/n) * np.dot(error.T, error)).squeeze()\n",
+    "    #raise NotImplementedError()\n",
     "    assert loss_val.shape == ()\n",
     "    return loss_val\n",
     "\n",
@@ -1200,14 +1270,17 @@
     "\n",
     "    ### Recall that the gradient of MSE is: 2/n X^T (θ X - y)   (note: θ = theta)\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    pred = X.dot(theta)\n",
+    "    error = pred - y\n",
+    "    gradient_vec = (2/n) * X.T.dot(error)\n",
+    "    # raise NotImplementedError()\n",
     "\n",
     "    return gradient_vec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1223,7 +1296,16 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5, 1) (5, 1)\n",
+      "(5, 1) (5, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\" [ASSERTS] Check 1d completed. \"\"\"\n",
     "\n",
@@ -2365,9 +2447,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "ml"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2379,7 +2461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
